<resources>
    <string name="app_name">ESL Learning Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">English Quiz Game</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="dob">Date of Birth</string>
    <string name="your_name">Full Name</string>
    <string name="cateogory">English Second Language</string>
    <string name="cateogoryName">Cateogory</string>
    <string name="mainCat">Main Cateogory</string>
    <string name="btn_cat">English Quiz No &amp; Not</string>
    <string name="btn_cat_1">English Quiz No, None &amp; Not</string>
    <string name="btn_cat_2">English Quiz This, That, These and Those</string>
    <string name="btn_cat_3">English Quiz Each &amp; Every</string>
    <string name="btn_cat_4">English Quiz There Is or There Are</string>
    <string name="skip">Skip</string>
    <string name="next">Submit</string>
</resources>