<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="Back"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/cateogory"
        android:textColor="#DA8607"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        app:layout_constraintBottom_toTopOf="@id/btn_cat"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_cat"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cat_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        />


    <Button
        android:id="@+id/btn_cat_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_cat_1"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cat_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cat"
        />

    <Button
        android:id="@+id/btn_cat_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_cat_2"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cat_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cat_1"
        />
    <Button
        android:id="@+id/btn_cat_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_cat_3"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cat_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cat_2"
        />

    <Button
        android:id="@+id/btn_cat_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_cat_4"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cat_3"
        />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cat_4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>